# matcha

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common.mk  conanbuildinfo.cmake  conanbuildinfo.gcc  conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json  makefile  matcha  shmup
.run/: Matcha.run.xml
design/: cat.afdesign  icon.afdesign  menu.afdesign  mouse.afdesign
src/: board.c  common.h  defs.h  draw.c  draw.h  init.c  init.h  input.c  level1.c  level1.h  main.c  main.h  menu.c  menu.h  options.c  options.h  sound.c  sound.h  stage.c  stage.h  structs.h  text.c  text.h  util.c
src/app/: board.c  board.h  level.c  level.h  level1.c  level1.h  menu.c  menu.h  options.c  options.h  stage.c  stage.h
src/data/: colors.c  colors.h  levels.c  levels.h
src/engine/: draw.c  draw.h  init.c  init.h  input.c  input.h  sound.c  sound.h  text.c  text.h  util.c  util.h
src/lib/: SDL_stbimage.h  stbttf.h
src/shared/: common.h  defs.h  structs.h
